<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Discover</string>
    <string name="action_settings">Settings</string>
    <string name="tab1_discover">Discover</string>
    <string name="tab2_planning">Planning</string>
    <string name="tab3_favorites">Favorites</string>
    <string name="tab4_messages">Messages</string>
    <string name="tab5_profile">Profile</string>

    <string name="login_mail">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_toregister">No account yet ? Create one</string>
    <string name="register_mail">Email</string>
    <string name="register_password">Password</string>
    <string name="register_button">Create Account</string>
    <string name="register_tologin">Already a member ? Login</string>
    <string name="register_name">First Name</string>
    <string name="register_creating_account">Creating Account ...</string>
    <string name="register_failed">Register failed</string>
    <string name="input_at_least_3_chars">at least 3 characters</string>
    <string name="input_invalid_mail">enter a valid email address</string>
    <string name="login_failed">Login failed</string>
    <string name="login_authentication">Authenticating ...</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="nointernet_message">Data connection unavailable. Get sure your wireless connection is enabled and try again</string>
    <string name="nointernet_title">Connexion failed</string>
    <string name="register_lastname">Last Name</string>
    <string name="input_at_least_4_chars">at least 4 alphanumeric characters</string>
    <string name="tab_1_cities">Cities</string>
    <string name="city_lille">Lille</string>
    <string name="city_lens">Lens</string>
    <string name="city_paris">Paris</string>
    <string name="guides_at">Guides at</string>
    <string name="guide">Guide</string>
    <string name="register_address">Address</string>
    <string name="register_birthdate">Birth Date</string>
    <string name="register_telNumber">Telephone Number</string>
    <string name="register_sex">Sex</string>
    <string name="birthdate_picker_title">Pick your birthdate</string>
    <string-array name="sex_array">
        <item>Man</item>
        <item>Woman</item>
    </string-array>
    <string name="register_sex_dialog">Select your sex</string>

</resources>
